# HerdSignal

./: .dockerignore  .gitignore  Dockerfile  README.md  elephant-audio-samples.md  elephant-database-guide.md  elephant-database-population-guide.md  elephant-dataset-download-guide.md  elephant-frontend-guide.md  elephant-pipeline-guide.md  elephant-voice-research.md  entrypoint.sh  figma-design-token-structure.md  frontend-audit-report.md  package.json  setup_and_run.sh
elephant-separator/: README.md  api_server.py  pyproject.toml  requirements.txt
elephant-separator/data/: annotations.csv
elephant-separator/database/: SUPABASE_SETUP.md  supabase_schema.sql
elephant-separator/experiments/: prepare.py  program.md  results.tsv  train.py
elephant-separator/frontend/: .env.example  next.config.ts  package-lock.json  package.json
elephant-separator/notebooks/: 01_data_exploration.ipynb  04_feature_matching.ipynb
elephant-separator/src/: __init__.py  dataset.py  evaluate.py  feature_matching.py  layer1_preprocess.py  layer2_separate.py  layer3_postprocess.py  run_batch_demucs.py  run_batch_separation.py  visualize.py
elephant-separator/tests/: test_dataset.py  test_dl_model.py  test_feature_matching.py  test_nmf.py  test_preprocess.py
elephant-seperator/: README.md  pyproject.toml
elephant-seperator/data/: annotations.csv
elephant-seperator/experiments/: program.md  train.py
elephant-seperator/notebooks/: 02_nmf_baseline.ipynb  03_deep_learning.ipynb
elephant-seperator/src/: __init__.py  dataset.py  evaluate.py  feature_matching.py  layer1_preprocess.py  layer3_postprocess.py
(+88 files in other folders)
