[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elephant-separator"
version = "0.1.0"
description = "Scaffold for elephant rumble isolation from noisy field recordings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "numpy>=1.24",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "librosa>=0.10",
  "soundfile>=0.12",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ml = [
  "torch>=2.1",
  "torchaudio>=2.1",
  "asteroid",
  "demucs>=4",
  "audiomentations>=0.35",
  "mir_eval>=0.7",
  "tqdm",
  "tensorboard>=2.14",
  "jupyter",
  "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
